test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_and_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  *
  identifier(ptr)
  =
  const int(0)
  ;
  const int(10)
  &
  identifier(ptr)
  ;
  return
  const int(0)
  ;
  }
